--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="/Icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#16a34a" />
   <meta name="description" content="Shree Guru Mess - Traditional South Indian Restaurant serving unlimited healthy meals on banana leaf. Pure jaggery sweets, no preservatives, fresh homely food in Hoskote, Bengaluru." />
