--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <title>Shree Guru Mess | Traditional South Indian Restaurant | Hoskote, Bengaluru</title>
+  <title>Shree Guru Mess</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
