--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,14 +5,14 @@
   <link rel="icon" href="/Icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#16a34a" />
-  <meta name="description" content="Shree Guru Mess - Traditional South Indian Restaurant serving unlimited healthy meals on banana leaf. Pure jaggery sweets, no preservatives, fresh homely food in Hoskote, Bengaluru." />
+  <meta name="description" content="Matha Shree Annapoorneswari Mess - Traditional South Indian Restaurant serving unlimited healthy meals on banana leaf. Pure jaggery sweets, no preservatives, fresh homely food in Hoskote, Bengaluru." />
   <meta name="keywords" content="South Indian Restaurant, Banana Leaf Meals, Hoskote, Bengaluru, Traditional Food, Healthy Meals, Jaggery Sweets, Ragi Ball" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <title>Shree Guru Mess</title>
+  <title>Matha Shree Annapoorneswari Mess</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
